--- a/mainWindow.html
+++ b/mainWindow.html
@@ -26,6 +26,14 @@
         ipcRenderer.on('item:clear', function(){
             ul.innerHTML = ''
         });
+
+        // Remove item
+
+        ul.addEventListener('dblclick', removeItem);
+
+        function removeItem(e){
+            e.target.remove();
+        }
     </script>
 </body>
 
