materialized the main window

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -3,10 +3,16 @@
 
 <head>
     <title>ShoppingList</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-    <h1>ShoppingList</h1>
+   <nav>
+       <div class="nav-wrapper">
+           <a class="brand-logo center">ShoppingList</a>
+
+       </div>
+   </nav>
     <ul></ul>
     <script>
         const electron = require('electron');
@@ -15,7 +21,9 @@
 
         //  Add item
         ipcRenderer.on('item:add', function(e, item){
+            ul.className = 'collection'
             const li = document.createElement('li');
+            li.className = 'collection-item'
             const itemText = document.createTextNode(item);
             li.appendChild(itemText)
             ul.appendChild(li)
@@ -25,6 +33,7 @@
         //  clear items
         ipcRenderer.on('item:clear', function(){
             ul.innerHTML = ''
+            ul.className = ''
         });
 
         // Remove item
@@ -33,6 +42,9 @@
 
         function removeItem(e){
             e.target.remove();
+            if(ul.children.length == 0){
+                ul.className = ''
+            }
         }
     </script>
 </body>
