--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>ShoppingList</title>
+    <title>TODO List</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
    <nav>
        <div class="nav-wrapper">
-           <a class="brand-logo center">ShoppingList</a>
+           <a class="brand-logo center">DOTO List</a>
 
        </div>
    </nav>
