changed name of the application

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -9,7 +9,7 @@
 <body>
    <nav>
        <div class="nav-wrapper">
-           <a class="brand-logo center">DOTO List</a>
+           <a class="brand-logo center">TODO List</a>
 
        </div>
    </nav>
